syntax="proto3";

option go_package = "./genproto/budgetpb";

service BudgetService {
    rpc CreateBudget(CreateBudgetRequest) returns (CreateBudgetResponse);
    rpc GetListBudget(GetListBudgetRequest) returns (GetListBudgetResponse);
    rpc UpdateBudget(UpdateBudgetRequest) returns (UpdateBudgetResponse);
}

message CreateBudgetRequest {
    string user_id = 1; 
    string category_id = 2;
    int64 amount = 3;
    string currency = 4;
}

message CreateBudgetResponse {
    string message = 1;
    string budget_id = 2;
}

message GetListBudgetRequest {
    string user_id = 1;  
}

message Budget {
    string budget_id = 1;
    string category = 2;
    int64 amount = 3;
    int64 spent = 4;
    string currency = 5;
}

message GetListBudgetResponse {
    repeated Budget list = 1;
}

message UpdateBudgetRequest {
    string user_id = 1;  
    string budget_id = 2;
    int64 amount = 3;
}

message UpdateBudgetResponse {
    string message = 1;
}
